fix: alignment and design styling setup

--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,62 @@
 body {
   width: 100%;
   height: 100vh;
+  background-color: #1b1b32;
+  /* color: #f5f6f7; */
 }
 
 header, main, footer {
   margin: 0 auto;
   text-align: center;
   width: 50vw;
+  max-width: 500px;
+  min-width: 300px;
 }
+
+fieldset {
+  border: none;
+  padding: 2rem 0;
+  border-bottom: 3px solid #3b3b4f;
+}
+
+fieldset:last-of-type {
+  border-bottom: none;
+}
+
+label {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 10px 0;
+}
+
+input,
+textarea,
+select {
+  margin: 10px 0 0 0;
+  width: 100%;
+  min-height: 2em;
+}
+
+input, textarea {
+  background-color: #0a0a23;
+  border: 1px solid #0a0a23;
+  color: #ffffff;
+}
+
+.inline {
+  width: unset;
+  margin: 0 0.5em 0 0;
+}
+
+input[type="submit"] {
+  display: block;
+  width: 60%;
+  margin: 1em auto;
+  height: 2em;
+  font-size: 1.1rem;
+  background-color: #3b3b4f;
+  border-color: white;
+  min-width: 300px;
+}
+
